# zettel-kasten

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE.md  README.ko.md  README.md  SECURITY.md  UPGRADE.ko.md  UPGRADE.md  VERSIONING.md  archive-infra-decision-log-2026-06-22-v03138-notion-recover-file-ref-credential-handoff.md
ai-archive-kit/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-container.txt
ai-archive-kit/cli/: README.md  archive.py
ai-archive-kit/docs/: ai-assisted-onboarding-and-provider-setup.md  docker-first-bootstrap.md  external-imports.md  new-user-flow.md  one-command-setup.md  open-source-publication-model.md  phase-2-quickstart.md  platform-support.md  public-documentation-map.ko.md  public-documentation-map.md  real-pilot-preflight.md  security-audit-2026-05-21.md  security-hardening.md  server-blueprint.md  source-maps.md  source-object-storage-policy.md  text-provenance-hierarchy.md  threat-model.md  wom-ai-runtime-skill-plugin-layer.md  wom-profile-registry.md
ai-archive-kit/mcp/: README.md
ai-archive-kit/plans/: next-thread-prompt-ownership-lineage.md  next-thread-prompt-zet-sharing-lifecycle.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-8-minting-implementation-plan.md  work-log-2026-05-22-zettelkasten-zet-blueprint.md  work-log-2026-05-23-delegate-capability-binding.md  work-log-2026-05-23-delegate-capability-contract.md  work-log-2026-05-23-github-publication.md  work-log-2026-05-23-minting-lifecycle.md  (+11 more)
wom-kit/: .dockerignore  .env.example  README.md  compose.yaml  pyproject.toml
(+1020 files in other folders)
