[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zettel-kasten-archive-kit"
version = "0.2.9"
description = "Local-first, AI-readable archive protocol and CLI for zettel-kasten archives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
archive = "ai_archive_kit.archive_cli:main"
archive-mcp = "ai_archive_kit.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
