[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zettel-kasten-archive-kit"
version = "0.2.18"
description = "WOM local-first, AI-native archive protocol and CLI for zet-centered nodes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
archive = "ai_archive_kit.archive_cli:main"
archive-mcp = "ai_archive_kit.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
